src/objects/IncentiveProjectAccrual__c.object
<CustomObject>
    <fields>
        <fullName>AccrualStatus__c</fullName>
        <label>Accrual Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApprovedTotalCostBudgetCurrent__c</fullName>
        <label>Approved Total Cost Budget (current)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedTotalCostBudgetatEnrollment__c</fullName>
        <label>Approved Total Cost Budget at Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaselineGMNMPercent__c</fullName>
        <label>Baseline GM% (NM%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BaselineGMNM__c</fullName>
        <label>Baseline GM$ (NM$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaselineNSR__c</fullName>
        <label>Baseline NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessLineDescription__c</fullName>
        <label>Business Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentEACGMNMPercent__c</fullName>
        <label>Current EAC GM% (NM%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CurrentEACGMNM__c</fullName>
        <label>Current EAC GM$ (NM$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentEACNSR__c</fullName>
        <label>Current EAC NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentEACTotalCostBudget__c</fullName>
        <label>Current EAC Total Cost Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentITDTotalCost__c</fullName>
        <label>Current ITD Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentMonthAccrual__c</fullName>
        <label>Current Month Accrual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DistrictDescription__c</fullName>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EACCostsAtEnrollment__c</fullName>
        <label>EAC Costs at Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnrollmentDate__c</fullName>
        <label>Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnrollmentPercentComplete__c</fullName>
        <label>Enrollment % Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EnrollmentStatus__c</fullName>
        <label>Enrollment Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedIncentivePool__c</fullName>
        <description>Estimated Incentive Pool moves dynamically, to be in EcoSystems, and owns the calculation. Created by Ecosystem and Consumed by Insight.</description>
        <inlineHelpText>Estimated Incentive Pool moves dynamically, to be in EcoSystems, and owns the calculation. Created by Ecosystem and consumed by Insight.</inlineHelpText>
        <label>Estimated Incentive Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeographyDescription__c</fullName>
        <label>Geography</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITDCostAtEnrollment__c</fullName>
        <label>ITD Cost at Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncentiveAccruedToDate__c</fullName>
        <label>Incentive Accrued to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncentiveEarnedToDate__c</fullName>
        <description>Insight Owns the calculations on this, created by Insight and consumed by Ecosystem.</description>
        <inlineHelpText>Insight Owns the calculations on this, created by Insight and consumed by Ecosystem.</inlineHelpText>
        <label>Incentive Earned To Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncentiveProject__c</fullName>
        <label>Incentive Project</label>
        <referenceTo>IncentiveProject__c</referenceTo>
        <relationshipLabel>Incentive Project Accruals</relationshipLabel>
        <relationshipName>IncentiveProjectAccruals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PaymentAmount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PercentComplete__c</fullName>
        <label>% Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PriorMonthAccrual__c</fullName>
        <label>Prior Month Accrual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectManagerName__c</fullName>
        <label>Project Manager Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>Project Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectOrganization__c</fullName>
        <label>Project Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionDescription__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledEndDate__c</fullName>
        <label>Scheduled End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ThresholdGMNMPercent__c</fullName>
        <label>Threshold GM% (NM%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ThresholdGMNM__c</fullName>
        <label>Threshold GM$ (NM$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Incentive Project Accrual</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IncentiveProject__c</columns>
        <columns>PercentComplete__c</columns>
        <columns>BusinessLineDescription__c</columns>
        <columns>BaselineNSR__c</columns>
        <columns>Client__c</columns>
        <columns>PriorMonthAccrual__c</columns>
        <columns>EnrollmentDate__c</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>EnrollmentPercentComplete__c</columns>
        <columns>ThresholdGMNM__c</columns>
        <columns>ThresholdGMNMPercent__c</columns>
        <columns>RegionDescription__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Incentive Project Accrual Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Project Accruals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>